[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pause/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Fonts/Menu_Font.tres" type="DynamicFont" id=3]



[node name="Options" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.86, 1.4 )
script = ExtResource( 1 )

[node name="Top_Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 1520, -10 )
custom_styles/panel = ExtResource( 2 )

[node name="Description" type="Label" parent="Top_Panel" groups=[
"text",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -10.5
margin_right = 43.0
margin_bottom = 10.5
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="Overview" type="Panel" parent="."]
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 1520, -10 )
custom_styles/panel = ExtResource( 2 )

[node name="Labels" type="VBoxContainer" parent="Overview"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = -200.0
alignment = 1

[node name="Resolution_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 132.0
margin_right = 155.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 3 )
text = "Resolution
"

[node name="Display_Mode" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 181.0
margin_right = 155.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 3 )
text = "Display Mode
"

[node name="Volume_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 230.0
margin_right = 155.0
margin_bottom = 275.0
custom_fonts/font = ExtResource( 3 )
text = "Volume
"

[node name="SFX_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 279.0
margin_right = 155.0
margin_bottom = 324.0
custom_fonts/font = ExtResource( 3 )
text = "Volume SFX
"

[node name="BGM_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 328.0
margin_right = 155.0
margin_bottom = 373.0
custom_fonts/font = ExtResource( 3 )
text = "Volume BGM
"

[node name="Font_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 377.0
margin_right = 155.0
margin_bottom = 422.0
custom_fonts/font = ExtResource( 3 )
text = "Font Size
"

[node name="Speed_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 426.0
margin_right = 155.0
margin_bottom = 471.0
custom_fonts/font = ExtResource( 3 )
text = "Text Speed
"

[node name="Battle_Speed_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 475.0
margin_right = 155.0
margin_bottom = 520.0
custom_fonts/font = ExtResource( 3 )
text = "Battle Speed
"

[node name="Cursor_Label" type="Label" parent="Overview/Labels" groups=[
"text",
]]
margin_top = 524.0
margin_right = 155.0
margin_bottom = 569.0
custom_fonts/font = ExtResource( 3 )
text = "Cursor Position
"

[node name="Values" type="VBoxContainer" parent="Overview"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 100.0
alignment = 1

[node name="Resolution" type="OptionButton" parent="Overview/Values" groups=[
"text",
]]
margin_top = 155.0
margin_right = 141.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "1280x768"
flat = true

[node name="Display" type="OptionButton" parent="Overview/Values" groups=[
"text",
"options",
]]
margin_top = 199.0
margin_right = 141.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Windowed"
flat = true

[node name="Volume" type="HSlider" parent="Overview/Values" groups=[
"text",
]]
margin_top = 243.0
margin_right = 141.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 40 )
min_value = -15.0
max_value = 15.0
ticks_on_borders = true

[node name="SFX" type="HSlider" parent="Overview/Values" groups=[
"text",
]]
margin_top = 287.0
margin_right = 141.0
margin_bottom = 327.0
rect_min_size = Vector2( 0, 40 )
min_value = -10.0
max_value = 10.0
ticks_on_borders = true

[node name="BGM" type="HSlider" parent="Overview/Values" groups=[
"text",
]]
margin_top = 331.0
margin_right = 141.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 40 )
min_value = -10.0
max_value = 10.0

[node name="Text_size" type="OptionButton" parent="Overview/Values" groups=[
"text",
"options",
]]
margin_top = 375.0
margin_right = 141.0
margin_bottom = 415.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "20"
flat = true

[node name="Text_speed" type="OptionButton" parent="Overview/Values" groups=[
"text",
"options",
]]
margin_top = 419.0
margin_right = 141.0
margin_bottom = 459.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Normal"
flat = true

[node name="Battle_speed" type="OptionButton" parent="Overview/Values" groups=[
"text",
"options",
]]
margin_top = 463.0
margin_right = 141.0
margin_bottom = 503.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Normal"
flat = true

[node name="Battle_cursor" type="OptionButton" parent="Overview/Values" groups=[
"text",
"options",
]]
margin_top = 507.0
margin_right = 141.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Reset"
flat = true
[connection signal="item_selected" from="Overview/Values/Resolution" to="." method="_on_Resolution_item_selected"]
[connection signal="item_selected" from="Overview/Values/Display" to="." method="_on_Display_item_selected"]
[connection signal="value_changed" from="Overview/Values/Volume" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="Overview/Values/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="Overview/Values/BGM" to="." method="_on_BGM_value_changed"]
[connection signal="item_selected" from="Overview/Values/Text_size" to="." method="_on_Text_size_item_selected"]
[connection signal="item_selected" from="Overview/Values/Text_speed" to="." method="_on_Text_speed_item_selected"]
[connection signal="item_selected" from="Overview/Values/Battle_speed" to="." method="_on_Battle_speed_item_selected"]
[connection signal="item_selected" from="Overview/Values/Battle_cursor" to="." method="_on_Battle_Cursor_item_selected"]
